# AI_projects

./: README.md
computer_vision/: README.md  code.ipynb
genetic_algorithm/: ec24835_best_net.pth  ec24835_best_net.py  ec24835_cnn.py  ec24835_genetic.py
miniproject_ECS795_240427850/: code_240427850.ipynb  training_log.txt
ros_python/src/ar_interface/: CMakeLists.txt  package.xml
ros_python/src/ar_interface/msg/: CubicTrajParams.msg
ros_python/src/ar_interface/srv/: ComputeCubicTraj.srv
ros_python/src/ar_test/: package.xml  setup.py
ros_python/src/ar_test/ar_test/: README.txt  compute_cubic_coeffs.py  cubic_traj_planner.py  plot_cubic_traj.py  points_generator.py
ros_python/src/ar_test/ar_test/launch/: cubic_traj_gen.launch.py
vgg_resnet_implementation/: README.md
